testdata/invalid/invalid_op_code_12.bop
[opcode("4567")]
message InvalidOpCode12A {}

[opcode("4567")]
message InvalidOpCode12B {}
